<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_node"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"


    tools:context="mx.edu.utng.orders.NodeActivity">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_assertio"
        android:inputType="text"
        android:hint="@string/assertio"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:layout_below="@+id/et_assertio"
        android:id="@+id/et_node_name"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tree"
        android:id="@+id/et_tree"
        android:layout_below="@+id/et_node_name"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_node"
        android:layout_below="@+id/et_tree"
        android:id="@+id/bt_save_node"/>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/bt_save_node"
        android:id="@+id/rv_node_list"
        >

    </android.support.v7.widget.RecyclerView>


</RelativeLayout>